# rust-multiplatform-template-lib

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE  LLM.md  README.html  README.md  TESTING.html  TEXT_GENERATION.md  build.rs  index.html
.cargo/: config.toml
.github/workflows/: deploy-docs.yml  pr-tests.yml
apps/android/: README.md  build.gradle.kts  gradlew  settings.gradle.kts
apps/android/app/: build.gradle.kts  proguard-rules.pro
apps/apple/: .gitignore  Package.swift  README.md
apps/apple/DemoApp/: ContentView.swift  TemplateDemoApp.swift
apps/apple/DemoApp.xcodeproj/: project.pbxproj
apps/apple/TemplateDemo/: ContentView.swift
apps/desktop/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
docs/: CONTRIBUTING.html  DEVELOPMENT.html  KOTLIN_EXAMPLES.html  KOTLIN_EXAMPLES.md  README.html  SWIFT_EXAMPLES.html  UDL_GUIDE.html  UDL_GUIDE.md  index.html
docs/lib/: index.html  search-index.js  src-files.js
docs/lib/rust_multiplatform_template_lib/: all.html  constant.DEFAULT_MAX_SIZE.html  constant.MAX_INPUT_SIZE.html  enum.TemplateError.html  fn.echo.html  fn.hello_world.html  fn.random.html  index.html  sidebar-items.js  struct.CancellationToken.html  struct.EchoResult.html  struct.TemplateConfig.html  type.TemplateResult.html
docs/lib/search.index/: 05d931a5348d.js  08a9b7834a16.js  0ca2f6495269.js  0e483257d393.js  1925169260c0.js  24d40aaae194.js  root.js  (+11 more)
docs_src/: README.md  SWIFT_EXAMPLES.md  TESTING.md
examples/: model_metadata.rs
lib/: crates.js  help.html  settings.html
lib/rust_multiplatform_template_lib/: all.html  constant.MAX_INPUT_SIZE.html  fn.echo.html  type.TemplateResult.html
lib/search.index/: 02053adeb5d2.js  1e8518f82d1b.js  20f98c8016a8.js  4871ef4c3ef2.js  7304784a2314.js  745fa632e253.js
lib/uniffi_bindgen/: all.html  index.html
scripts/: build-all.sh  build-apple.sh  build-kotlin.sh  clean-all.sh  doc-all.sh  run-desktop.sh  run_me_first.sh  setup.sh  test-all.sh  test-apple.sh  test-kotlin.sh
src/: error.rs  lib.rs  llama.rs  template.rs  template.udl  uniffi_wrapper.rs
tests/: template_tests.rs
(+76 files in other folders)
